<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/calculo"
            android:textSize="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="|" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clean"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="C"
            />
        <Button
            android:id="@+id/borrar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="borrar"
            />
        <Button
            android:id="@+id/modulo"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="%"
            />

        <Button
            android:id="@+id/division"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/btnDivision"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSiete"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/btnSiete"
            />
        <Button
            android:id="@+id/btnOcho"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/btnOcho"
            />
        <Button
            android:id="@+id/btnNueve"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/btnNueve"
            />

        <Button
            android:id="@+id/btnX"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/btnX"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCuatro"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/btnCuatro"
            />
        <Button
            android:id="@+id/btnCinco"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/btnCinco"
            />
        <Button
            android:id="@+id/btnSeis"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/btnSeis"
            />

        <Button
            android:id="@+id/btnMenos"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/btnMenos"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnUno"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/btnUno"
            />
        <Button
            android:id="@+id/btnDos"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/btnDos"
            />
        <Button
            android:id="@+id/btnTres"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/btnTres"
            />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/btnPlus"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDobleCero"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="00"
            />

        <Button
            android:id="@+id/btnCero"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/btnCero"
            />

        <Button
            android:id="@+id/btnPunto"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/btnPunto"
            />

        <Button
            android:id="@+id/btnIgual"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/btnIgual"
            />


    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>